@@ -6,6 +6,8 @@
 
 	* ncremap replace ConvertSCRIPToExodus (no longer exists) by ConvertMeshoExodus
 
+	* map checker examins global attributes map_method, no_conserve, noconserve to determine whether weights are intentionally non-conservative
+
 	* ncks chk_map add INFO not scary WARNING when weights are intentionally non-conservative
 
 2022-09-23  Charlie Zender  <zender@uci.edu>
